# interview_coder

./: .env.example  .gitignore  README.md  pyproject.toml  run.ps1  setup.ps1  ui.ps1  ux_research_coding_rules.md  ux_research_database_structure.md  Ошибка.txt
.claude/commands/: cluster-naming.md
projects/example/: project.yaml
scripts/: test_llm.py
src/coder/: __init__.py  __main__.py  cli.py  config.py  criticality.py  export_xlsx.py  ingest.py  llm.py  models.py  pipeline.py  prompts.py  relevance.py  transcript.py
ui/: app.py
