[project]
name = "coder"
version = "0.1.0"
description = "Кодировщик UX/CX-интервью"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "streamlit>=1.38.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
coder = "coder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coder"]

[tool.ruff]
line-length = 100
target-version = "py311"
